@@ -35,6 +35,8 @@ Version 2.0-dev (CVS)
   passed in feature instead of through the return value of the method as
   was the case with the old SetFeature() method in MITAB 1.x.
 
+- Added attribute index support for the sql queries in mapinfo tab format (GDAL bug #3687)
+
 - Fixed bad use of atof when locale setting doesn't use "." for float (GDAL bug #3775)
 
 - Removed incomplete patch for affine params support in mitab. (bug 1155)
@@ -996,5 +998,5 @@ Version 0.1 - (1999-12-04)
 
 
 ------------
-$Id: HISTORY.TXT,v 1.252 2010-10-07 18:46:26 aboudreault Exp $
+$Id: HISTORY.TXT,v 1.253 2010-10-08 18:38:13 aboudreault Exp $
 ------------
